Adds Polished Crimson Coal to Lang File

--- a/src/main/resources/assets/cm/lang/en_us.lang
+++ b/src/main/resources/assets/cm/lang/en_us.lang
@@ -1,2 +1,3 @@
 item.crimson_coal.name=Crimson Coal
 tile.crimson_coal_block.name=Crimson Coal Block
+tile.polished_crimson_coal_block.name=Polished Crimson Coal Block
