Added CrimsonCoalOre blocks

--- a/src/main/resources/assets/cm/lang/en_us.lang
+++ b/src/main/resources/assets/cm/lang/en_us.lang
@@ -1,3 +1,4 @@
 item.crimson_coal.name=Crimson Coal
 tile.crimson_coal_block.name=Crimson Coal Block
+tile.crimson_coal_ore.name=Crimson Coal Ore
 tile.polished_crimson_coal_block.name=Polished Crimson Coal Block
