--- a/src/main/resources/assets/cm/lang/en_us.lang
+++ b/src/main/resources/assets/cm/lang/en_us.lang
@@ -2,3 +2,4 @@ item.crimson_coal.name=Crimson Coal
 tile.crimson_coal_block.name=Crimson Coal Block
 tile.crimson_coal_ore.name=Crimson Coal Ore
 tile.polished_crimson_coal_block.name=Polished Crimson Coal Block
+tile.chaotic_coal_ore.name=Chaotic Coal Ore
