Added Crimson Crawler. Crimson crawlers are faster, but weaker, than normal spiders. Spawns only in the Nether.

--- a/src/main/resources/assets/cm/lang/en_us.lang
+++ b/src/main/resources/assets/cm/lang/en_us.lang
@@ -1,4 +1,5 @@
 item.crimson_coal.name=Crimson Coal
+entity.Crimson Crawler.name=Crimson Crawler
 tile.crimson_coal_block.name=Crimson Coal Block
 tile.crimson_coal_ore.name=Crimson Coal Ore
 tile.polished_crimson_coal_block.name=Polished Crimson Coal Block
